2011-12-03  Robert Larice
 * src/spicelib/analysis/dcpss.c ,
 * src/spicelib/analysis/dctran.c :
  cleanup, aiming for higher similarity of dctran.c and dcpss.c
  this cleanup was checked for identical object code (gcc on linux)

2011-12-03  Robert Larice
 * src/frontend/numparam/xpressn.c :
  bug fix, parameter assignment was broken for expressions containing one of '<=' '>=' or '!='

2011-12-03  Robert Larice
 * visualc/vngspice.vcproj :
  remove some unused `vcproj' dependencies

2011-11-30  Robert Larice
 * src/frontend/inpcom.c :
  bug fix, parameter processing was broken for nested .subckt

2011-11-27  Holger Vogt
 * /frontend/runcoms2.c: command 'remcirc' to remove a circuit.

2011-11-26  Holger Vogt
 * /frontend/plotting/gnuplot.c: appendwrite and complex
   variable printing added.

2011-11-13  Holger Vogt
 * inp.c: code beautify, indentations etc.
 * inpcom.c: reordering, fcn prototypes added, docu added

2011-11-04  Holger Vogt
 * INSTALL: give more precise instructions

2011-11-03  Robert Larice
 * src/xspice/icm/GNUmakefile.in :
  xspice/icm/GNUmakefile.in, add missing `uninstall' target

2011-10-31  Robert Larice
 * src/main.c ,
 * src/frontend/com_fft.c ,
 * src/frontend/ftesopt.c ,
 * src/frontend/resource.c ,
 * src/frontend/numparam/xpressn.c :
  swallow warnings

2011-10-31  Robert Larice
 * src/spicelib/devices/hisim2/hisim2.h ,
 * src/spicelib/devices/hisim2/hsm2ld.c ,
 * src/spicelib/devices/hisimhv/hisimhv.h ,
 * src/spicelib/devices/hisimhv/hsmhvld.c ,
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
 * src/spicelib/devices/hisimhv/hsmhvset.c :
  swallow warnings in hisimhv and hisim2 code

2011-10-31  Robert Larice
 * devices/mos2/mos2ask.c:
  Fix the source/drain typo for overlap cap's, for mos2 as well
    see https://sourceforge.net/tracker/?func=detail&atid=423915&aid=3429175&group_id=38962
    see commit from 2000-09-05

2011-10-30  Holger Vogt
 * DEVICES: update to hisim_hv 1.2.2

2011-10-30  Dietmar Warning